config_dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: create-react-demo
  labels:
    app: create-react-demo  
spec:  
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: create-react-demo
